# model_api

./: .gitignore  alpha2.ipynb  pyproject.toml
backend/: main.py
backend/scr/: CONFIG.py  utils.py
