[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["Qwest1204 <workemailfordaniil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^7.2.1"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
joblib = "^1.4.2"
scikit-learn = "^1.5.1"
catboost = "^1.2.5"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
numpy = "1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
